Some minor updates

--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="images/imageedit.gif">
+
     <title>Farmaparnassou.gr - Ελληνικά Προϊόντα</title>
 </head>
 <style>
+    html{
+        height:100%;
+        min-height:100%;
+    }
+
     body{
-        background: url("images/background cows high res.jpg")no-repeat center fixed;
+
+        background: url("images/background cows high res.jpg") no-repeat center center  fixed;
         background-size: cover;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
+        overflow-x:hidden;
 
     }
 
